# cfn-rust

./: Cargo.toml
artifacts/cloudformation/: test.template
blueprints/common/: globals.hbs
blueprints/stacks/: test.hbs
src/: helpers.rs  main.rs
